Fixed slideshow captions on mobile (bottoms were cut off)
Added @media to push them up a bit

--- a/css/style.css
+++ b/css/style.css
@@ -782,6 +782,12 @@ div.row p{  /*ADDED 2/9/16 TO GET SPACE BETWEEN THE SIDE OF TEXT AND GRID BOX BO
   bottom: auto;
 }
 
+@media only screen and (max-width: 479px){
+	.carousel-caption{
+		top: 42%;
+	}
+}
+
 .carousel-caption > p{
     font-size: 60%;
 }
